Issue #15118: Change return value of os.uname() and os.times() from plain tuples to immutable iterable objects with named attributes (structseq objects).